tests/baselines/reference/parserParameterList11.errors.txt
parserParameterList11.ts(1,8): error TS1047: A rest parameter cannot be optional.


==== parserParameterList11.ts (1 errors) ====
    (...arg?) => 102;
           ~
!!! error TS1047: A rest parameter cannot be optional.